// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ConfirmTrack /> mounts with config 1`] = `
<p
  class="MuiTypography-root ConfirmTrack-spacing-334 MuiTypography-body1"
>
  Using adapter 
  <code>
    FromConfigAdapter
  </code>
   and guessing track type
   
  <code>
    AlignmentsTrack
  </code>
  . Please enter a track name and, if necessary, update the track type.
</p>
`;

exports[`<ConfirmTrack /> mounts with localPath 1`] = `
<p
  class="MuiTypography-root ConfirmTrack-spacing-223 MuiTypography-body1"
>
  Using adapter 
  <code>
    BamAdapter
  </code>
   and guessing track type
   
  <code>
    AlignmentsTrack
  </code>
  . Please enter a track name and, if necessary, update the track type.
</p>
`;

exports[`<ConfirmTrack /> mounts with uri 1`] = `
<p
  class="MuiTypography-root ConfirmTrack-spacing-112 MuiTypography-body1"
>
  Using adapter 
  <code>
    BamAdapter
  </code>
   and guessing track type
   
  <code>
    AlignmentsTrack
  </code>
  . Please enter a track name and, if necessary, update the track type.
</p>
`;

exports[`<ConfirmTrack /> renders 1`] = `
<p
  class="MuiTypography-root ConfirmTrack-spacing-1 MuiTypography-body1"
>
  Using adapter 
  <code>
    BamAdapter
  </code>
   and guessing track type
   
  <code>
    AlignmentsTrack
  </code>
  . Please enter a track name and, if necessary, update the track type.
</p>
`;
